--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     "babel-runtime": "^5.0.8",
     "css-loader": "^0.10.1",
     "exports-loader": "^0.6.2",
-    "imports-loader": "^0.6.3",
     "gulp": "^3.8.11",
     "gulp-babel": "^5.1.0",
     "gulp-concat": "^2.5.2",
     "gulp-connect": "^2.2.0",
+    "gulp-gh-pages": "^0.5.1",
     "gulp-less": "^3.0.2",
     "gulp-webpack": "^1.3.0",
+    "imports-loader": "^0.6.3",
     "jquery": "^2.1.4",
     "style-loader": "^0.10.2",
     "webpack": "^1.7.3"
