--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "gulp-connect": "^2.2.0",
     "gulp-gh-pages": "^0.5.1",
     "gulp-less": "^3.0.2",
+    "gulp-uglify": "^1.2.0",
     "gulp-webpack": "^1.3.0",
     "imports-loader": "^0.6.3",
     "jquery": "^2.1.4",
     "style-loader": "^0.10.2",
+    "uglify-loader": "^1.2.0",
     "webpack": "^1.7.3"
   },
   "bugs": {
